[project]
name = "multi-agent-rag-with-langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docling>=2.108.0",
    "ibm-watsonx-ai>=1.5.14",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-ibm>=1.1.0",
    "langchain-openai>=1.3.3",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.7",
    "loguru>=0.7.3",
    "python-dotenv>=1.2.2",
]
